syntax = "proto3";

package proto.user;

option go_package = "./user";
import "google/api/annotations.proto";

service User {
  rpc CreateUserV1(CreateUserV1Request) returns (CreateUserV1Response) {
    option (google.api.http) = { post: "/api/v1/create/user"; body: "*"; };
  };
}

message CreateUserV1Request {
  string access_token  = 1;
  string user_login    = 2;
  string user_password = 3;
  string user_role     = 4;
}

message CreateUserV1Response {}